# beam-boozle

./: README.md  main.py  materialise_cov.py  noise.py  noise_tsukui.py  pyproject.toml  toy_1_underestimated_uncertainties.py
examples/: likelihood.py  noise_tsukui.py  toy_1_underestimated_uncertainties.py
examples_paper/: likelihood.py  materialise_cov.py  noise.py  noise_tsukui.py
examples_paper/package_testing/: noise_tsukui_2.py  toy_1_underestimated_uncertainties_2.py
src/beam_boozle/: __init__.py
src/beam_boozle/jax_backend/: __init__.py  likelihoods_impl.py
src/beam_boozle/numpy_backend/: __init__.py  likelihoods_impl.py
src/beam_boozle/utils/: __init__.py  psd.py
