[project]
name = "fast-corr-likelihoods"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astropy>=7.1.0",
    "ipykernel>=6.30.1",
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "mpl-drip>=1.0.5",
    "numpy>=2.3.3",
    "scipy>=1.16.2",
]
