[project]
name = "beam-boozle"
version = "0.1.0"
description = "(Very) fast correlated likelihood evaluations and gradients for interferometric images"
readme = "README.md"
authors = [{ name = "Thomas Hilder", email = "Thomas.Hilder@monash.edu" }]
requires-python = ">=3.13"
dependencies = ["astropy>=7.1.0", "numpy>=2.3.3", "scipy>=1.16.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# include = ["src/beam-boozle/py.typed"]
exclude = ["**/__pycache__/**"]

[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/beam_boozle"]

[tool.ruff]
line-length = 99 # Sorry PEP8 I'm a rebel

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0", "ruff>=0.13.1"]
examples = [
    "arviz>=0.22.0",
    "corner>=2.2.3",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "mpl-drip>=1.0.5",
    "numpyro>=0.19.0",
    "tqdm>=4.67.1",
]
jax = ["jax>=0.7.2", "jaxtyping>=0.3.2"]
